2003-05-10  John Levon  <levon@movementarian.org>

	* libop++/Makefile.am:
	* libop++/op_header.cpp:
	* libop++/op_print_event.h:
	* libop++/op_print_event.cpp: remove op_print_event
	files, making it a function local to op_header.cpp

2003-05-10  John Levon  <levon@movementarian.org>

	* libop++/op_header.h:
	* libop++/op_header.cpp: make output_header() be
	an operator<<
	
	* pp/opannotate.cpp:
	* pp/opreport.cpp: changes from the above

	* libpp/profile.h: small cleanup

2003-05-10  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: replace format_percent() by
	  format_double()

	* libpp/format_output.cpp:
	* pp/opannotate.cpp:
	* pp/opreport.cpp: use format_double()

2003-05-09  John Levon  <levon@movementarian.org>

	* libpp/opp_symbol.h: app name, image name should
	be in symbol not in file_location

	* libpp/format_output.cpp:
	* libpp/profile_container.h:
	* libpp/profile_container.cpp:
	* libpp/symbol_container.cpp:
	* libpp/symbol_functors.cpp: changes from above

2003-05-09  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp: vma_64 doesn't need
	to be in field_datum. make one output() private

2003-05-09  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp: pass a symbol ref
	not name down into the formatters

2003-05-09  John Levon  <levon@movementarian.org>

	* libutil++/string_manip.h:
	* libutil++/string_manip.cpp: sample_filename() is unused

2003-05-09  Philippe Elie  <phil.el@wanadoo.fr>

	* libop++/op_header.h:
	* libop++/op_header.cpp: read_header() new
	* libop++/Makefile.in: we depend on libdb

	* pp/opannotate.cpp:
	* pp/opreport.cpp: better way to get sample file header

2003-05-09  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.cpp: remove redudant map formater
	* pp/opannotate.cpp: spurious cout

2003-05-08  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp:
	* pp/opreport_options.cpp: